<resources>
    <string name="app_name">aNews</string>

    <string name="action_settings">Settings</string>
    <string name="home_label">Principal</string>
    <string name="faouvorites_label">Favoritos</string>
    <string name="downloads_label">Descargas</string>
    <string name="more__label">Mas</string>
    <string name="settings_label">Preferencias</string>
    <string name="add_email_label">Agregá un mail</string>

    <!-- Categories array-->
    <string-array name="string_categories">
        <item> Ultimas noticias</item>
        <item> Mas leidas</item>
        <item> Politica</item>
        <item> Economia</item>
        <item> El mundo</item>
        <item> Opinion</item>
        <item> Sociedad</item>
        <item> Espectaculos</item>
        <item> Tecnologia</item>
        <item> Deportes</item>
        <item> Seguridad</item>
        <item> Negocios</item>
        <item> Vida y Ocio</item>
        <item> Espectaculos</item>

    </string-array>
    <string name="title_activity_splash">SplashActivity</string>
    <string name="title_favourites">Favoritos</string>
    <string name="title_note">Noticias</string>
    <string name="title_new">Noticias</string>
    <string name="title_clear">Limpiar </string>
    <string name="title_empty">Todavía no tenés ningun articulo guardado</string>
    <string name="msg_added">Agregado a favoritos</string>
    <string name="msg_clear">Limpieza finalizada</string>
    <string name="btn_share">Compartir</string>
    <string name="loading">Cargando Articulos</string>
    <string name="btn_viewmore">Ver Mas</string>
    <string name="error_on_init_tts">Imposible lanzar el reproductor de audio</string>
    <string name="error_to_show_note">Error al compartir la noticia</string>
    <string name="error_invalid_email_format">uno o mas mails inválidos</string>
    <string name="error_to_share_with_fb">Todavia no es posible compartir mediante Facebook, disculpe las molestias</string>
    <string name="error_to_show_with_tw">Todavia no es posible compartir mediante Twitter, disculpe las molestias</string>
    <string name="select_at_least_one_option">Seleccione al menos un medio para compartir</string>
    <string name="error_ws_isnot_installed">Instale Whatsapp antes de compartir</string>
    <string name="news_lanacion_label">Novedades La Nacion</string>
    <string name="error_gmail_isnot_available">Debe instalar Gmail antes de compartir</string>
    <string name="sharing_label">Compartiendo...</string>
    <string name="add_a_msg_labels">Agregá un mensaje</string>
    <string name="sorry_label">Disculpe las molestias</string>
    <string name="error_unavailable_feature">Esta feature todavía no se encuentra implementada</string>
    <string name="share_label">Share</string>

</resources>
